--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,19 +16,9 @@
           </span>
         </label>
 
-        <div class="trigger">
-          <a class="page-link" href="/">Home</a>
-          <!-- <a class="page-link" href="https://ischool.umd.edu/form_2018ignite" target="_blank">Registration</a> -->
-          <!-- <a class="page-link" href="/#travel">Travel</a> -->
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
-        </div>
+        
       </nav>
     {%- endif -%}
-    <img src="/assets/images/ignite_logo.png">
+    <!-- <img src="/assets/images/ignite_logo.png"> -->
   </div>
 </header>
