--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
     <p><a href="https://medium.com/@cydharrell/civic-tech-as-a-tween-4cd780b971bb" target="_blank">Background</a></p>
   {%- endif -%}
 
-  {% include history.html %}
+  {%- include history.html -%}
  
 
 
