--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,9 +10,9 @@ layout: default
   {{ content }}
 
   {%- if site.posts.size > 0 -%}
-    <h2 class="title">Civic Design Timeline</h2>
+    <h1 class="title">Civic Tech and Design Timeline</h2>
     <h3 class="subtitle">By Cyd Harrell and Collaborators</h3>
-    <p><a href="https://medium.com/@cydharrell/civic-tech-as-a-tween-4cd780b971bb" target="_blank">Background</a></p>
+    <p id="background"><a href="https://medium.com/@cydharrell/civic-tech-as-a-tween-4cd780b971bb" target="_blank">Read this aritlce for the background</a></p>
   {%- endif -%}
 
   {%- include history.html -%}
