--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,10 +14,9 @@
             {%- else -%}
               {{ site.title | escape }}
             {%- endif -%}
-            </li>
-            {%- if site.email -%}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+            </li>            
+            <li><a class="github" href="https://github.com/civic-tech-timeline/civic-tech-timeline.github.io">Github for this page</a></li> 
+            
         </ul>
       </div>
 
@@ -26,7 +25,7 @@
       </div> -->
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
+     
       </div>
     </div>
 
