--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,7 +12,7 @@ layout: default
   {%- if site.posts.size > 0 -%}
     <h1 class="title">Civic Tech and Design Timeline</h2>
     <h3 class="subtitle">By Cyd Harrell and Collaborators</h3>
-    <p id="background"><a href="https://medium.com/@cydharrell/civic-tech-as-a-tween-4cd780b971bb" target="_blank">Read this aritlce for the background</a></p>
+    <p id="background"><a href="https://medium.com/@cydharrell/civic-tech-as-a-tween-4cd780b971bb" target="_blank">Read this article for the background</a></p>
   {%- endif -%}
 
   {%- include history.html -%}
