--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -316,7 +316,7 @@ table {
 
 div.media-heading{
   font-size: 20px;  
-  margin: 0 0 10px 150px;
+  margin: 0 0 10px 160px;
 }
 
 div.comment{
@@ -334,7 +334,8 @@ div.comment{
 }
 
 div.year {
-  width: 150px;
+  width: 155px;
+  padding-right: 5px;
   font-size: 20px;
   color: orange;  
   min-height: 47px;
